[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptraid"
version = "0.1.0"
description = "Automated prompt injection red-teaming framework for LLM-based agents, mapped to MITRE ATLAS."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
promptraid = "promptraid.cli:main"

[tool.setuptools.packages.find]
include = ["promptraid*"]
